<?xml version="1.0"?>
<package format="2">
  <name>camera_aravis</name>
  <version>2.0.0</version>
  <description>camera_aravis: An ethernet camera driver for ROS.</description>

  <maintainer email="stevesafarik@gmail.com">Steve Safarik</maintainer>

  <author email="stevesafarik@gmail.com">Steve Safarik</author>
  <author email="andrew.straw@imp.ac.at">Andrew Straw</author>
  <author email="j.corbett@sssmanufacturing.com">Jeremy Corbett</author>
  <author email="llorenz@dataspeedinc.com">Lincoln Lorenz</author>

  <license>LGPLv2</license>

  <url type="website">http://github.com/linknum23/camera_aravis</url>

  <author>strawlab</author>
  <author>Steve Safarik</author>
  <author>Jeremy Corbett</author>
  <author>Lincoln Lorenz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>nodelet_topic_tools</depend>
  <depend>tf</depend>
  <depend>aravis</depend>

  <export>
    <nodelet plugin="${prefix}/camera_aravis_plugins.xml" />
  </export>

</package>
